<resources>
    <string name="app_name">lesson4</string>
    <string name="_19_c">19 C</string>
    <string name="todo">TODO</string>
    <string name="su">Sunday</string>
    <string name="сlear">Сlear</string>
    <string name="mon">Mn</string>
    <string name="tu">Tu</string>
    <string name="wed">Wd</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sat">Sat</string>
    <string name="_24_c">24 C</string>
    <string name="pressure_mmhg_art">Pressure, mmHg Art.</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="wind_speed">wind</string>
    <string name="back">Back</string>
    <string name="button">Button</string>
    <string name="Select_city">Select city</string>
    <string name="ufa">Ufa</string>
    <string name="_25_c">25 C</string>
    <string name="empty" />
    <string name="l">/</string>
    <string name="_18_c">18 C</string>
    <string name="_23_c">23 C</string>
    <string name="_27_c">27 C</string>
    <string name="_20_c">20 C</string>
    <string name="_14_c">14 C</string>
    <string name="_16_c">16 C</string>
    <string name="s_w">S-W</string>
    <string name="july_01_today">July 01 today</string>
    <string name="settings">settings</string>
    <string name="site">site</string>
    <string name="find_city">Find a city</string>
    <string name="How_to_choose">How to choose</string>
    <string name="cityName">city</string>
    <string name="task">perform</string>
    <string name="m_s">m/s</string>
    <string name="refresh">Refresh</string>
    <string-array name="city">
        <item>Abdulino</item>
        <item>Abzakovo</item>
        <item>Anapa</item>
        <item>Yekaterinburg</item>
        <item>Moscow</item>
        <item>Ufa</item>
    </string-array>



</resources>