<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitiesFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city"

        android:layout_width="220dp"
        android:layout_height="83dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCity"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="город"
            android:text="@string/ufa"
            android:textColor="@color/design_default_color_on_secondary"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="5dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="160dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:entries="@array/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <CheckBox
        android:id="@+id/pressure"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="12dp"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/humidity"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <CheckBox
        android:id="@+id/wind_speed"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <Button
        android:id="@+id/button2"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Select_city"
        app:layout_constraintBottom_toTopOf="@+id/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/find_city"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>