<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/selection_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_city"
        app:layout_constraintEnd_toEndOf="@+id/selection_city"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/selection_city"
        app:layout_constraintTop_toBottomOf="@+id/selection_city" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="160dp"
        android:layout_height="350dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/pressure"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_city" />

    <CheckBox
        android:id="@+id/pressure"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_city" />

    <CheckBox
        android:id="@+id/humidity"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/wind_speed"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/wind_speed"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

</androidx.constraintlayout.widget.ConstraintLayout>